--- a/hk-money-mo.html
+++ b/hk-money-mo.html
@@ -57,6 +57,7 @@
               <a class="fiq-down">한경머니 사용설명서<br> 다운로드</a>
             </div>
             <p class="fiq-txt">한경머니는 한국경제신문사가 오랜 기간동안 구축한 DB를 기반으로 제공하는 실시간 외환 정보 서비스입니다.<br> 원달러를 비롯한 국제외환시세, NDF시세, 원/엔시세 등 실시간 외환정보와 주식, 채권, 원자재 시세 등 풍부한 금융시장 정보를 이용하실 수 있습니다.<br> 로이터 등 국내외 경제전문가들과 증권사, 선물 회사 등의 전문시황, 중장기 전망, 분석 리포트 등의 심도있는 자료를 제공하고 있습니다.</p>
+            <span class="fiq-top-img"></span>
           </div>
         </section>
         <section class="fiq-section fiq-sec1">
